Updated project files

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,28 +34,28 @@
         
         <div class="carousel-item">
           <a href="projects/project1.html">
-            <img src="images/velvera/project1-thumb.jpg" alt="Project 1">
+            <img src="images/velvera/velvera4.jpg" alt="Project 1">
             <h3>Luxury skin care brand</h3>
           </a>
         </div>
 
         <div class="carousel-item">
           <a href="projects/project2.html">
-            <img src="images/elan/Élan Maison.jpg" alt="Project 2">
+            <img src="images/elan/elan3.jpg" alt="Project 2">
             <h3>Luxury fashion house</h3>
           </a>
         </div>
 
         <div class="carousel-item">
           <a href="projects/project3.html">
-            <img src="images/artnasia crafts/Sticker.png" alt="Project 3">
+            <img src="images/artnasia/admire8.png" alt="Project 3">
             <h3>Luxury furniture brand</h3>
           </a>
         </div>
 
         <div class="carousel-item">
           <a href="projects/project4.html">
-            <img src="images/Brew & Gold/afe.jpg" alt="Project 4">
+            <img src="images/Brew/brew1.jpg" alt="Project 4">
             <h3>luxury coffee & lifestyle brand</h3>
           </a>
         </div>
