--- a/projects/project1.html
+++ b/projects/project1.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h1 class="project-title">Velvera</h1>
       <p class="project-subtitle">Luxury skin care brand</p>
-      <img src="/images/velvera/skin care brand logo.jpg" alt="Velvera Main" class="hero-image">
+      <img src="/images/velvera/velvera3.jpg" alt="Velvera Main" class="hero-image">
     </div>
   </section>
 
@@ -57,12 +57,11 @@
 
       <h3>Gallery</h3>
       <div class="gallery">
-        <img src="\images\velvera\SM Crousels Mockup Velvera.jpg" alt="Gallery 1">
-        <img src="\images\velvera\Colour Palette Board.jpg" alt="Gallery 2">
-        <img src="\images\velvera\Home Page Mockup Velvera.jpg" alt="Gallery 3">
-        <img src="\images\velvera\Social media Crousels 3 Velvera.jpg" alt="Gallery 4">
-        <img src="\images\velvera\Social media Crousels 5 Velvera.jpg" alt="Gallery 5">
-        <img src="\images\velvera\Visiting Cards Mokcup Velvera.jpg" alt="Gallery 6">
+        <img src="\images\velvera\velvera1.jpg" alt="Gallery 1">
+        <img src="\images\velvera\velvera2.jpg" alt="Gallery 3">
+        <img src="\images\velvera\velvera5.jpg" alt="Gallery 4">
+        <img src="\images\velvera\velvera6.jpg" alt="Gallery 5">
+        <img src="\images\velvera\velvera8.jpg" alt="Gallery 6">
       </div>
     </div>
   </section>
