--- a/projects/project3.html
+++ b/projects/project3.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h1 class="project-title">Artnasia Crafts</h1>
       <p class="project-subtitle">Luxury furniture brand </p>
-      <img src="/images/artnasia crafts/LOGO.png" alt="Velvera Main" class="hero-image">
+      <img src="/images/artnasia/admire3.png" alt="Velvera Main" class="hero-image">
     </div>
   </section>
 
@@ -54,12 +54,12 @@
 
       <h3>Gallery</h3>
       <div class="gallery">
-        <img src="\images/artnasia crafts/Visiting Cards Mokcup Artnasia Crafts.jpg" alt="Gallery 1">
-        <img src="\images/artnasia crafts/Id Colour Palette xc.jpg" alt="Gallery 2">
-        <img src="\images/artnasia crafts/Mouse pad Mokcup.jpg" alt="Gallery 3">
-        <img src="\images/artnasia crafts/Round Stamp_Mockup Artnasia Crafts.jpg" alt="Gallery 4">
-        <img src="\images/artnasia crafts/SM Crousels Mockup Artnasia x.jpg" alt="Gallery 5">
-        <img src="\images/artnasia crafts/Sticker Mockup.jpg" alt="Gallery 6">
+        <img src="\images/artnasia/admire1.jpg" alt="Gallery 1">
+        <img src="\images/artnasia/admire2.jpg" alt="Gallery 2">
+        <img src="\images/artnasia/admire4.jpg" alt="Gallery 3">
+        <img src="\images/artnasia/admire5.jpg" alt="Gallery 4">
+        <img src="\images/artnasia/admire6.jpg" alt="Gallery 5">
+        <img src="\images/artnasia/admire7.jpg" alt="Gallery 6">
       </div>
     </div>
   </section>
