--- a/projects/project4.html
+++ b/projects/project4.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h1 class="project-title">Brew & Gold</h1>
       <p class="project-subtitle">Luxury coffee & lifestyle brand: </p>
-      <img src="/images/Brew & Gold/Free_Hanging_Sign_Mockup_2.jpg" alt="Velvera Main" class="hero-image">
+      <img src="/images/Brew/brew2.jpg" alt="Velvera Main" class="hero-image">
     </div>
   </section>
 
@@ -51,12 +51,12 @@ Brew & Gold is a premium coffee and lifestyle brand crafted for those who savor 
 
       <h3>Gallery</h3>
       <div class="gallery">
-        <img src="\images/Brew & Gold/Free_Sign_Mockup.jpg" alt="Gallery 1">
-        <img src="\images/Brew & Gold/Stand_Banner_Mockup_2.jpg" alt="Gallery 2">
-        <img src="\images/Brew & Gold/SM post3.jpg" alt="Gallery 3">
-        <img src="\images/Brew & Gold/Beige And Brown Classic Coffee Shop Menu.jpg" alt="Gallery 4">
-        <img src="\images/Brew & Gold/instargam post.jpg" alt="Gallery 5">
-        <img src="\images/Brew & Gold/afe.png" alt="Gallery 6">
+        <img src="/images/Brew/brew7.jpg" alt="Gallery 1">
+        <img src="/images/Brew/brew3.jpg" alt="Gallery 2">
+        <img src="/images/Brew/brew4.jpg" alt="Gallery 3">
+        <img src="/images/Brew/brew5.png" alt="Gallery 4">
+        <img src="/images/Brew/brew6.jpg" alt="Gallery 5">
+        <img src="/images/Brew/brew1.jpg" alt="Gallery 6">
       </div>
     </div>
   </section>
