--- a/projects/project2.html
+++ b/projects/project2.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h1 class="project-title">Élan Maison</h1>
       <p class="project-subtitle">Luxury fashion house</p>
-      <img src="images/elan/elan7.png" alt="Velvera Main" class="hero-image">
+      <img src="../images/elan/elan7.png" alt="Velvera Main" class="hero-image">
     </div>
   </section>
 
@@ -52,12 +52,12 @@
 
       <h3>Gallery</h3>
       <div class="gallery">
-        <img src="images\elan\elan1.jpg" alt="Gallery 1">
-        <img src="images\elan\elan2.jpg" alt="Gallery 2">
-        <img src="images\elan\elan4.jpg" alt="Gallery 3">
-        <img src="images\elan\elan5.jpg" alt="Gallery 4">
-        <img src="images\elan\elan6.jpg" alt="Gallery 5">
-        <img src="images\elan\elan7.png" alt="Gallery 6">
+        <img src="../images\elan\elan1.jpg" alt="Gallery 1">
+        <img src="../images\elan\elan2.jpg" alt="Gallery 2">
+        <img src="../images\elan\elan4.jpg" alt="Gallery 3">
+        <img src="../images\elan\elan5.jpg" alt="Gallery 4">
+        <img src="../images\elan\elan6.jpg" alt="Gallery 5">
+        <img src="../images\elan\elan7.png" alt="Gallery 6">
       </div>
     </div>
   </section>
